2 20 rename package parser to aggregatorUtil, fix